--- a/src/sass/_components.sass.scss
+++ b/src/sass/_components.sass.scss
@@ -487,6 +487,7 @@ margin-left: auto;
 		}
 	}
 	@include responsive-mobile {
+		width: 95%;
 		margin: 14rem auto;
 	}
 }
